# internship_helper

./: .dockerignore  .env.example  .gitignore  =13.0  ALEMBIC.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  INTERVIEW_SIMULATION_DESIGN.md  README.md  TASKS.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6808a6c6eb76_initial_schema.py  a1b2c3d4e5f6_add_scraped_offers.py  b2c3d4e5f6a7_add_bookmarked_status.py  c3d4e5f6a7b8_add_reminders_and_offer_notes.py
backend/: Dockerfile
backend/src/: auth.py  config.py  crud.py  database.py  file_service.py  interview_service.py  llm_service.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test_autofill_sanitize.py  test_cv_analysis.py  test_cvs.py  test_notes.py  test_offers.py  test_profile.py  test_reminders.py  test_scrapers.py  test_search.py  test_templates.py  test_users.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  ThemeContext.tsx  api.ts  index.css  main.tsx  themeContextDef.ts  themes.ts  useTheme.ts
src/: config.py  crud.py  database.py  file_service.py  interview_service.py  llm_service.py  main.py  models.py  schemas.py
src/frontend/: package-lock.json  package.json
src/routers/: ai.py  auth.py  cvs.py  interview.py  notes.py  offers.py  profile.py  reminders.py  search.py  templates.py  users.py
tests/: conftest.py  test_cvs.py  test_dashboard.py  test_offers.py  test_profile.py  test_reminders.py  test_scrapers.py  test_templates.py  test_users.py
(+82 files in other folders)
